flex/flex-tests/testData/flex_highlighting/CheckUniquenessInPackage.as
package {
public class <error descr="Nonunique object in package">CheckUniquenessInPackage</error> {}
}